chore: AI code quality improvements via Claude (#900)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>