@@ -28,7 +28,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Random;
-import java.util.Set;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.IntStream;
 
@@ -174,7 +173,7 @@ public class InjectSimpleExampleCubesConfig {
 		registrer.registerForest(MeasureForest.fromMeasures("simple", measures));
 
 		registrer.registerCube("simple", "simple", "simple");
-		registrer.tagCube("simple", Set.of("inmemory"));
+		registrer.tagCube("simple", ImmutableSet.of("inmemory"));
 
 		registrer.registerCustomMarker("ccy",
 				EqualsMatcher.matchEq("simple"),
